jvm/gateway